--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8" />
+  <title>Title</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <main class="container">
+    <h1>H1</h1>
+    <p class="subtitle">Tools · Demos · Experiments</p>
+
+    <section class="projects">
+      <div class="card">
+        <h2>H2-1</h2>
+        <p>xxxxxxxxxx</p>
+        <a href="#">xxxxxxxxxxx →</a>
+      </div>
+
+      <div class="card">
+        <h2>H2-2</h2>
+        <p>xxxxxxxxxx</p>
+        <a href="#">xxxxxxxxxxx →</a>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
 
