add nutr_app page

--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <title>Title</title>
+  <title>Li</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main class="container">
-    <h1>H1</h1>
+    <h1>LI✦KE</h1>
     <p class="subtitle">Tools · Demos · Experiments</p>
 
     <section class="projects">
       <div class="card">
-        <h2>H2-1</h2>
-        <p>xxxxxxxxxx</p>
-        <a href="#">xxxxxxxxxxx →</a>
+        <h2>Daily Nutrition Checker</h2>
+        <p>A Data-Driven Nutrition Analysis Web Application</p>
+        <a href="projects/nutrition/index.html">
+          Learn more ›
+        </a>
       </div>
 
-      <div class="card">
+      <!-- <div class="card">
         <h2>H2-2</h2>
         <p>xxxxxxxxxx</p>
-        <a href="#">xxxxxxxxxxx →</a>
-      </div>
+        <a href="#">xxxxxxxxxxx ›</a>
+      </div> -->
     </section>
   </main>
 </body>
