fix html nutr_app name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="card">
         <h2>Daily Nutrition Checker</h2>
         <p>A Data-Driven Nutrition Analysis Web Application</p>
-        <a href="projects/nutrition/index.html">
+        <a href="projects/nutr_app/index.html">
           Learn more ›
         </a>
       </div>
